the interactive version

--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <head>
         <meta charset = "UTF-8">
         <title>Rock-Paper-Scissors</title>
+        <link rel = "stylesheet" href = "style.css">
     </head>
 
     <body>
-        <script src = "code.js"></script>
+        <div class = "heading">
+            ROCK PAPER SCISSORS
+        </div>
+        <div class = "buttons">
+            <button class = "btn rock">ROCK</button>
+            <button class = "btn paper">PAPER</button>
+            <button class = "btn scissor">SCISSOR</button>
+        </div>
+        <div class = "bottom">
+            <div class = "results">
+                <div class = "you">
+                    <div>You</div>
+                    <div class="ypoint">0</div>
+                </div>
+                <div class = "computer">
+                    <div>Computer</div>
+                    <div class = "cpoint">0</div>
+                </div>
+            </div>
+            <div class="info">Choose your weapon!</div>
+            <div class = "replay">
+                <button class = "retry">PLAY AGAIN</button>
+            </div>
+        </div>
+        
+        
+        <script src = "JavaScript.js"></script>
     </body>
 </html>
